[package]
name = "yuya"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-files = "0.6"
pulldown-cmark = "0.9"  # Markdown parser
ping-rs = "0.1.2"
serde = { version = "1.0", features = ["derive"] }
